WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263843
AX: The isolated tree doesn't update when the name attribute changes
https://bugs.webkit.org/show_bug.cgi?id=263843
Summary
AX: The isolated tree doesn't update when the name attribute changes
Tyler Wilcock
Reported
2023-10-28 23:46:03 PDT
We use the name attribute for the AXRadioGroupSearchKey, which allows clients to find the next / previous distinct radiogroup. By not updating AXPropertyName::NameAttribute, this search query can return incorrect results after dynamic changes.
Attachments
Patch
(20.19 KB, patch)
2023-10-29 00:10 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(20.26 KB, patch)
2023-10-29 09:45 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-28 23:46:12 PDT
<
rdar://problem/117641685
>
Tyler Wilcock
Comment 2
2023-10-29 00:10:08 PDT
Created
attachment 468396
[details]
Patch
chris fleizach
Comment 3
2023-10-29 08:08:15 PDT
Comment on
attachment 468396
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=468396&action=review
> Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:592 > + else
Does storing an empty string recreate the issue we tried to fix by not storing default values?
Tyler Wilcock
Comment 4
2023-10-29 09:45:29 PDT
Created
attachment 468401
[details]
Patch
Tyler Wilcock
Comment 5
2023-10-29 09:48:21 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 468396
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=468396&action=review
> > > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:592 > > + else > > Does storing an empty string recreate the issue we tried to fix by not > storing default values?
Uploaded a new version of the patch that removes std::optional from the method signature of nameAttribute(), obviating the need to store an empty string here (which would've resulted in AXPropertyName::NameAttribute from being removed from the map rather than storing an empty string per AXIsolatedObject::setProperty).
EWS
Comment 6
2023-10-29 14:27:04 PDT
Committed
269912@main
(2ab054fd990f): <
https://commits.webkit.org/269912@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468401
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug