AX: The isolated tree doesn't update when the name attribute changes https://bugs.webkit.org/show_bug.cgi?id=263843 rdar://problem/117641685

Reviewed by Chris Fleizach.

We use the name attribute for the AXRadioGroupSearchKey, which allows clients to find
the next / previous distinct radiogroup. By not updating AXPropertyName::NameAttribute,
this search query was returning incorrect results after dynamic changes.

Testcases added to accessibility/mac/search-predicate-for-adhoc-radio-groups.html.

* LayoutTests/accessibility/mac/search-predicate-for-adhoc-radio-groups-expected.txt:
* LayoutTests/accessibility/mac/search-predicate-for-adhoc-radio-groups.html:
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::nameAttribute const):
(WebCore::Accessibility::isRadioButtonInDifferentAdhocGroup):
(WebCore::AccessibilityObject::attributeValue const): Deleted.
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::initializeProperties):
(WebCore::AXIsolatedObject::nameAttribute const):
(WebCore::AXIsolatedObject::attributeValue const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperties):

Canonical link: https://commits.webkit.org/269912@main